--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -721,7 +721,8 @@ The ULL dataset is not merely a repository of numbers and statistics; it is a wi
 
 \subsection{Pre-processing operations on ULL dataset}
 A deep analysis of the dataset led us to make a first features selection. More specifically for this work only the \emph{important} and \emph{protected} attributes have been selected.
-Furthermore, after a proper domain analysis the protected attributes selected to be passed to the algorithms have been a subset of the orginal selected:
+\subsubsection{Protected attributes choice}
+After a proper domain analysis the protected attributes selected to be passed to the algorithms have been a subset of the orginal selected:
 \begin{enumerate}
     \item sex
     \item capital island: if the student comes from the capital of the city
@@ -732,18 +733,20 @@ Furthermore, after a proper domain analysis the protected attributes selected to
     \item mothly houseold income
     \item cconomic, social and cultural satus index
 \end{enumerate}
-It's furthermore fundamental to remark the methodology behind the ways in which the protected attributes are considered(together with the other ones not considered to fed the algorithm).
-More specifically:
+\subsubsection{Attributes pre-processing}
+The dataset documentation provided the information related to the type of each attribute (e.g. Continuous or Categorical). Starting from this information the variables have been pre-processed as follows.
 \begin{itemize}
-    \item if the attribute is binary no transformation is applied
-    \item if the attribue is not binary that it's trnasformed into a binary attribute where the value \emph{1} means over the mean and the \emph{0} under the mean.
+    \item Each categorical attribute has been replaced with an encoded value
+    \item For each protected attribute has been computed the following operation:
+    \begin{itemize}
+        \item If the protected attirbute is a binary one, assuming that the binary values may not be onlu 0 and 1, then the greatest value has been replaced with 1 and the other one with 0.
+        \item If the protected attribute is a categorical one then is performed a search of the most frequent value in the column. Then this value in the column is replaced with 1, otherwise with 0. With this policy is established that the fairness must be guaranteed between the most frequent value and the others.
+        \item if the protected attribute is a continuous one then is computed the the theshold resulting from the sum of minimum value and maximum value in the column divided by 2. Every value in the column above this threshold is replaced with 1, otherwise with 0. This means that the fairness must be guaranteed between the students that are above the threshold for a specific attribute and the other ones.
+    \end{itemize}
 \end{itemize}
 
 \subsection{Goal of this work}
-At the core of this endeavor lies a fundamental goal: to predict the level of English proficiency for students in their current grade based on their past experiences and academic trajectory. This predictive undertaking is driven by a commitment to harness data-driven insights and analytical methodologies to empower educational institutions and decision-makers in enhancing the educational experience and opportunities for students. \\
-To achieve this ambitious objective, a critical aspect of the workflow is the computation of the "level\textunderscore ing" attribute, employing the same pre-processing transformations that have been meticulously applied to the non-binary protected attributes. These transformations serve as the cornerstone for establishing a uniform basis for analysis and prediction. \\
-The ultimate aim is to match students to discern whether a given student falls into one of two categories: either being under the mean English proficiency level or exceeding the mean. This binary categorization is essential for designing effective interventions, personalized learning pathways, and targeted support systems. \\
-By matching students to these categories, it becomes feasible to identify patterns, trends, and critical factors that influence students' English proficiency. This predictive model, rooted in the wealth of data encapsulated within the ULL dataset, offers a powerful tool for educational institutions and stakeholders to proactively address disparities, tailor educational strategies, and ensure that students receive the support and opportunities they need to thrive.
+The several output in this dataset are considered as protected attributes. More specifically the goal of this work is to predict the english level of a given student. Since the \emph{level\textunderscore ing} attribute is a categorical ones then the output states if a student has the same level of the majority of the students or if not. The goal is to make the predictor and the prediction fair, this means that the belonging of a student to a specific output, the match indeed, must no be influenced by any other factors rather than the predictor's mechanisms.
 \newpage
 \section{Fairness through unawareness with proxy detection: implementation}
 In this section are reported the several implementative issues and features that have been encountered and designed during the development of this algorithm. Two approaches are explored in detail, the one with \textbf{apriori} and the one in which only the \textbf{variables} have been taken in account. \\
