fix: doc fixing started

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1136,6 +1136,7 @@ In the following are reported the results for each grade. More specifically for 
     \hline
 \end{tabular}
 
+\iffalse
 \newpage
 \section{Grade 4}
 \subsection{Best models}
@@ -1191,6 +1192,7 @@ In the following are reported the results for each grade. More specifically for 
     DecisionTree Classifier &  \\
     \hline
 \end{tabular}
+\fi
 
 %----------------------------------------------------------------------------------------
 \chapter{Conclusion}
