--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -52,15 +52,14 @@
 \begin{abstract}
 
     This work presents an in-depth approach to addressing fairness and bias mitigation in the design and development of data-driven methods. The primary contribution of this study is the proposal and implementation of an innovative \emph{Fair-by-Design} workflow that incorporates various strategies for bias mitigation within data, algorithms, and decision-making processes. \\
-    The research focuses on the educational data of the Canary Islands, leveraging a dataset encompassing detailed information about student performance and educational outcomes. \\
+    The work focuses on the educational data of the Canary Islands, leveraging a dataset encompassing detailed information about student performance and educational outcomes. \\
     The primary objective is to ensure equitable and unbiased application of data-driven algorithms within the educational context. \\
-    The methodology involves the systematic evaluation of multiple bias mitigation strategies, including techniques for algorithmic fairness, data preprocessing, and model calibration. The critical aspect of this research centers on the comparison of these strategies based on their impact on the predictive accuracy of the algorithms. \\ 
-    This approach provides practical insights into the trade-offs between fairness and accuracy. \\
-    The research findings offer valuable insights into the trade-offs between fairness and accuracy when developing data-driven methods for educational data. Through the proposed \emph{Fair-by-Design} workflow, the study demonstrates how to strike a balance between ensuring fairness and maintaining the accuracy of predictions. \\
+    The methodology involves the systematic evaluation of multiple bias mitigation strategies. The critical aspect of this research centers on the comparison of these strategies based on their impact on the predictive accuracy of the algorithms. \\ 
+    This approach provides practical insights into the trade-offs between fairness and accuracy, showing how several approaches can lead to different accuracy scores on the same dataset and with the same models. \\
+    The work findings offer valuable insights into the trade-offs between fairness and accuracy when developing data-driven methods for educational data. \\
     This thesis contributes to the ongoing discourse on fairness in machine learning and data-driven decision-making. The results provide guidance for stakeholders in the education sector, aiding them in making informed decisions about algorithm deployment to promote fairness and minimize bias within educational systems. \\
-    \\
-    
-    \end{abstract}
+
+\end{abstract}
     
 
 
@@ -81,11 +80,12 @@ Never too far down, to come back
 \label{chap:introduction}
 %----------------------------------------------------------------------------------------
 
-Artificial Intelligence (AI) has experienced an unprecedented surge in prominence and utility in recent years, emerging as a transformative force across diverse domains. From powering autonomous vehicles to aiding healthcare diagnosis and recommendation systems, AI applications have become increasingly woven into the fabric of our daily lives. However, this rapid proliferation has ushered in a pressing concern — the pervasive presence of bias within AI systems. \\
+Artificial Intelligence (AI) has experienced an unprecedented surge in prominence and utility in recent years, emerging as a transformative force across diverse domains. From powering autonomous vehicles to aiding healthcare diagnosis and recommendation systems, AI applications have become increasingly woven into the fabric of our daily lives. However, this rapid proliferation has ushered in a pressing concern about the pervasive presence of bias within AI systems. \\
 The concept of bias in AI pertains to the inadvertent or systematic preference shown towards specific groups or characteristics within the data, algorithms, or decision-making processes. This partiality leads to outcomes that are unjust, unfair, and unequal. In this era of AI-driven decision-making, the imperative to address bias is not just a technological challenge but a moral and societal necessity. Additionally, the ethical principle of fairness underscores the collective aspiration to ensure that AI systems yield equitable and just results for all individuals, regardless of their personal attributes. \\
 The repercussions of bias and unfairness in AI systems extend far beyond mere technological concerns. These issues carry profound societal implications, impacting vital areas such as employment, education, and access to critical services. Biased AI systems perpetuate and exacerbate existing inequalities, inadvertently reinforcing harmful stereotypes and undermining the foundational principles of justice and equality. \\
 In the realm of education, data-driven decision-making has gained significant ground, with educational institutions increasingly relying on AI systems for tasks ranging from student admissions to evaluating learning outcomes and allocating educational resources. The stakes in this domain are notably high. Ensuring that these AI-driven education systems mitigate bias and prioritize fairness is not just a technological endeavor; it is a moral and societal imperative. \\
-This work introduces a comprehensive Fair-by-Design workflow, meticulously detailed in the "Contribution" chapter. The crux of this workflow is its unique ability to integrate fairness considerations right from the inception of AI system design. In this thesis, we rigorously explore and implement four distinct and promising approaches to ensure fairness. These approaches are seamlessly integrated into the workflow, facilitating a comprehensive and unbiased comparison of their effectiveness in mitigating bias. \\
+This work introduces a comprehensive Fair-by-Design workflow, meticulously detailed in the \textbf{Contribution} chapter. The crux of this workflow is its unique ability to integrate fairness considerations right from the inception of AI system design. In this thesis, we rigorously explore and implement three distinct and promising approaches to ensure fairness, together with the well-known \emph{fairness through unawareness} approach, with the goal to compare the accuracy derived by the application of each approach with the usual scenario in which fairness assumptions are not made. \\
+These approaches are seamlessly integrated into the workflow, facilitating a comprehensive and unbiased comparison of their effectiveness in mitigating bias. \\
 The structure of this thesis unfolds as follows: The \textbf{State of the Art} chapter conducts a thorough review of the existing approaches and methodologies designed to address bias and promote fairness in the development of AI systems. This chapter lays the groundwork upon which our innovative Fair-by-Design workflow is built. The \textbf{Contribution} chapter delves into the intricacies of the workflow, elucidating the seamless integration of various fairness approaches into the design process. The \textbf{Validation} chapter meticulously presents the results derived from the application of these fairness approaches, offering an empirical comparison of their performance and effectiveness. Finally, the \textbf{Conclusion} chapter not only imparts insights gleaned from our research but also outlines prospective directions for further advancements in this critical and ever-evolving field.
 
 %----------------------------------------------------------------------------------------
