workflow diagrams inserted

--- a/front.tex
+++ b/front.tex
@@ -41,6 +41,7 @@
 				\textit{Correlatore} 
 				\\
 				\textbf{Prof.} \textbf{Roberta Calegari}
+				\\
 				\textbf{Prof.} \textbf{Andrea Omicini}
 			\end{flushleft}
 		\end{minipage}
@@ -57,9 +58,9 @@
 		\vspace{0.3cm}
 		\Large
 		
-		(N-Esima) Sessione di Laurea
+		IV Sessione di Laurea
 		\\
-		Anno Accademico 20XX-20YY
+		Anno Accademico 2022/2023
 	\end{center}
 \end{titlepage}
 \restoregeometry
