--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -361,6 +361,13 @@ The model validation phase also incorporates techniques like cross-validation to
 Furthermore, model validation may involve sensitivity analyses, where the model's performance is evaluated under varying conditions or with perturbed data to identify potential vulnerabilities and areas for improvement. \\
 The results of the model validation are integral to gauging the model's effectiveness, uncovering potential biases, and making informed decisions about further refinement or deployment. The insights gained from the validation process contribute to the ongoing quest for fairness, accuracy, and ethical decision-making within the AI system. \\
 In summary, the model validation step plays a fundamental role in the workflow, offering a comprehensive evaluation of the AI model's performance, fairness, and predictive power. Its insights are crucial for guiding the system's development and ensuring that it aligns with the principles of fairness, equity, and accuracy. \\
+
+Here's the graphical representation of the presented workflow:
+\begin{figure}[t]
+    \includegraphics[width=8cm]{/home/antonio/Desktop/Thesis/diagrams/FbD-Workflow.drawio.png}
+    \centering
+\end{figure}
+
 \newpage
 In the following are presented the several algorithms that have been put into the \textbf{Fairness pre-processing} step to perform a final comparaison.
 \section{Fairness through unawareness with proxy detection}
