--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -363,8 +363,9 @@ The results of the model validation are integral to gauging the model's effectiv
 In summary, the model validation step plays a fundamental role in the workflow, offering a comprehensive evaluation of the AI model's performance, fairness, and predictive power. Its insights are crucial for guiding the system's development and ensuring that it aligns with the principles of fairness, equity, and accuracy. \\
 
 Here's the graphical representation of the presented workflow:
+\graphicspath{{/home/antonio/Desktop/Thesis/diagrams/}}
 \begin{figure}[t]
-    \includegraphics[width=8cm]{/home/antonio/Desktop/Thesis/diagrams/FbD-Workflow.drawio.png}
+    \includegraphics[width=8cm]{FbD-Workflow.drawio.png}
     \centering
 \end{figure}
 
