fix: partially fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -365,7 +365,7 @@ In summary, the model validation step plays a fundamental role in the workflow, 
 Here's the graphical representation of the presented workflow:
 \graphicspath{{/home/antonio/Desktop/Thesis/diagrams/}}
 \begin{figure}[t]
-    \includegraphics[width=8cm]{FbD-Workflow.drawio.png}
+    \includegraphics[width=8cm]{FbD.png}
     \centering
 \end{figure}
 
