--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -41,9 +41,7 @@
 \acrodef{AI}{Artificial Intelligence}
 
 
-\mainlinespacing{1.241} % line spacing in mainmatter, comment to default (1)
-
-\graphicspath{{/home/antonio/Desktop/Thesis/diagrams/}}
+\mainlinespacing{1.241} % line spacing in mainmatter, comment to default
 
 \begin{document}
 	
