--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -5,7 +5,7 @@
 \usepackage{listings}
 \usepackage{algpseudocode}
 \usepackage{tabularx}
-\usepackage{graphicx}
+\usepackage{graphics}
 \usepackage{disi-thesis}
 \usepackage{code-lstlistings}
 \usepackage{notes}
