fix: image fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -363,7 +363,7 @@ The results of the model validation are integral to gauging the model's effectiv
 In summary, the model validation step plays a fundamental role in the workflow, offering a comprehensive evaluation of the AI model's performance, fairness, and predictive power. Its insights are crucial for guiding the system's development and ensuring that it aligns with the principles of fairness, equity, and accuracy. \\
 
 Here's the graphical representation of the presented workflow:
-\includegraphics[width=8cm]{FbD.png}
+\includegraphics[width=1.0]{FbD.png}
 
 \newpage
 In the following are presented the several algorithms that have been put into the \textbf{Fairness pre-processing} step to perform a final comparaison.
