--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -498,9 +498,7 @@ Let's consider a dataset \( D \) belonging to \( \mathbb{R}^{n \times m} \) with
 
 where:
 \begin{align*}
-v\_i & : \text{ith attribute belonging to the protected variables}, 
-
-Y & : \text{output column}.
+v\_i & : \text{ith attribute belonging to the protected variables}, Y & : \text{output column}.
 \end{align*}
 
 The fairness function \( \lambda \) evaluates the relationship between a protected attribute \( v_i \) and the output \( Y \), producing a value that represents the level of fairness for that protected attribute. 
